# spatial-index

./: CMakeLists.txt  README.md  build_and_test.sh
backend/: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  setup.sh
backend/src/: main.py
backend/src/datastructs/: DataManager.py
backend/src/models/: __init__.py  generate_points.py  knn_query.py  point.py  range_query.py
backend/src/routes/: routes.py
backend/tests/: test_datamanager.py  test_endpoints.py
cpp/: README.md
cpp/src/: BruteForce.cpp  BruteForce.h  CMakeLists.txt  ExportToPy.cpp  KDNode.h  KDNodeComparator.h  KDTree.cpp  KDTree.h  Main.cpp  Point.cpp  Point.h  Quadtree.cpp  Quadtree.h  QuadtreeNode.cpp  QuadtreeNode.h  SpatialIndex.h  Utils.h
cpp/tests/: BruteForceTests.cpp  CMakeLists.txt  KDTreeTests.cpp  PointTests.cpp  QuadtreeTests.cpp
frontend/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  apiConfig.ts
frontend/src/components/Chart/: Chart.css  Chart.tsx
frontend/src/components/Chart/functions/: createOrPopulateChart.ts  mouseMovements.ts  performKnnQuery.ts  performRangeQuery.ts
frontend/src/components/ControlPanel/: ControlPanel.tsx  GeneratePoints.tsx  QuerySelector.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/pages/functions/: generatePoints.ts
frontend/src/types/: Point.ts
spatial-index/: CMakeLists.txt  spatial-index.cpp  spatial-index.h
src/: CMakeLists.txt  KDNode.h  KDTree.cpp  KDTree.h  Main.cpp  Point.cpp  Point.h  Quadtree.cpp  Quadtree.h  QuadtreeNode.cpp  QuadtreeNode.h
tests/: CMakeLists.txt  PointTests.cpp
